--- a/CSS/projectsCSS.css
+++ b/CSS/projectsCSS.css
@@ -24,6 +24,7 @@ body {
   padding-top: 60px;
   transition: left 0.3s;
   padding-left: 40px;
+  z-index: 1001;
 }
 
 .sidebar a {
@@ -50,7 +51,7 @@ body {
   color: var(--text-color);
   background: none;
   border: none;
-  z-index: 101;
+  z-index: 1002;
 }
 
 .main-content {
